--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -1,1 +1,18 @@
 @charset 'UTF-8';
+@import "normalize";
+@import "variables";
+
+.app-wrapper {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+
+  grid-template-areas: "header header header" 
+                        "table map stats" 
+                        "footer footer footer";
+
+  grid-template-rows: 60px 1fr 60px;
+  grid-template-columns: 2fr 5fr 2fr;
+
+  background-color: black;
+}
