--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
-@import "variables";
-@import "mixins";
+@import 'variables';
+@import 'mixins';
 
 .footer-wrapper {
   @include wrapper-props;
