--- a/src/assets/stylesheets/stats.scss
+++ b/src/assets/stylesheets/stats.scss
@@ -1,10 +1,10 @@
 @charset 'UTF-8';
 
-@import "variables";
-@import "mixins";
+@import 'variables';
+@import 'mixins';
 
 .stats-wrapper {
   @include wrapper-props;
-  
+
   grid-area: stats;
 }
