--- a/src/assets/stylesheets/table.scss
+++ b/src/assets/stylesheets/table.scss
@@ -1,6 +1,6 @@
 @charset 'UTF-8';
-@import "variables";
-@import "mixins";
+@import 'variables';
+@import 'mixins';
 
 .table-wrapper {
   @include wrapper-props;
