--- a/src/assets/stylesheets/table.scss
+++ b/src/assets/stylesheets/table.scss
@@ -2,13 +2,46 @@
 @import 'variables';
 @import 'mixins';
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 .table-wrapper {
   @include wrapper-props;
 
   grid-area: table;
+  text-align: center;
 }
 
 .container {
-  display: flex;
+  text-align: left;
+  color: #d6d6d6;
 }
 
+.flagImg {
+  padding-top: 0px;
+}
+
+.countries {
+  padding-left: 5px;
+}
+
+.countriesValue {
+  color: #e60000;
+  margin-left: 5px;
+}
+
+.findArea {
+  width: 60%;
+  background: rgb(165, 147, 147);
+}
+
+.selectors {
+  width: 100%;
+}
+
+.containerSelectors {
+  display: flex;
+}
