--- a/src/assets/stylesheets/stats.scss
+++ b/src/assets/stylesheets/stats.scss
@@ -5,6 +5,10 @@
 
 .stats-wrapper {
   @include wrapper-props;
-
   grid-area: stats;
+  padding: 1em;
+  .stats-table{
+    display: flex;
+    justify-content: space-between;
+  }
 }
