--- a/src/assets/stylesheets/table.scss
+++ b/src/assets/stylesheets/table.scss
@@ -13,6 +13,8 @@
 
   grid-area: table;
   text-align: center;
+  overflow-y: auto;
+  min-height: 100%;
 }
 
 .container {
@@ -30,7 +32,7 @@
 
 .countriesValue {
   color: #e60000;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 .findArea {
