--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -10,9 +10,10 @@
   grid-template-areas:
     'header header header'
     'table map stats'
+    'table map graph'
     'footer footer footer';
 
-  grid-template-rows: 60px 1fr 60px;
+  grid-template-rows: 60px 1fr 1fr 60px;
   grid-template-columns: 2fr 5fr 2fr;
 
   background-color: black;
