--- a/src/assets/stylesheets/map.scss
+++ b/src/assets/stylesheets/map.scss
@@ -76,7 +76,7 @@
 }
 
 .maps_list-menu::-webkit-scrollbar-thumb {
-  background:red;
+  background:$text-red-color;
   border-radius: 10px;
 }
 
@@ -94,4 +94,31 @@
   cursor: pointer;
   border: 2px $text-red-color solid;
   color: $text-red-color;
+}
+
+.map-container_wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.fullScreenButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  z-index: 1000;
+  cursor: pointer;
+  
+  line-height: 40px;
+  border-radius: 3px;
+  text-align: center;
+  background-color: $text-red-color;
+  transition: all 0.3s ease-out;
+}
+
+.fullScreenButton:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
