feat: add keyboard

--- a/src/assets/stylesheets/table.scss
+++ b/src/assets/stylesheets/table.scss
@@ -28,13 +28,29 @@
   border-radius: 10px;
 }
 
+.countryHeader {
+  font-size: 19px;
+  color: rgb(179, 130, 130);
+}
+
 .container {
   text-align: left;
   color: #d6d6d6;
+  margin-top: 5px;
 }
 
 .flagImg {
   padding-top: 0px;
+}
+
+.coutrywrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.coutrywrap:hover {
+  cursor: pointer;
+  background: #586068;
 }
 
 .countries {
@@ -43,13 +59,13 @@
 
 .countriesValue {
   color: #e60000;
-  margin-left: 10px;
 }
 
 .findArea {
   width: 60%;
-  background: rgb(165, 147, 147);
+  background: #7c7971;
   outline: none;
+  color: #d6d6d6;
 }
 
 .selectors {
@@ -58,4 +74,97 @@
 
 .containerSelectors {
   display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.butNextCointry {
+  color: #d1512a;
+  background: #000;
+  outline: none;
+}
+
+.butNextCointry:hover {
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+.keyboard {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 5px 0;
+  background: #004134;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  user-select: none;
+  transition: bottom 0.4s;
+  z-index: 10000;
+}
+
+.keyboardhidden {
+  bottom: -100%;
+}
+
+.keyboard__keys {
+  text-align: center;
+}
+
+.keyboard__key {
+  height: 45px;
+  width: 6%;
+  max-width: 90px;
+  margin: 3px;
+  border-radius: 4px;
+  border: none;
+  background: rgba(255, 255, 255, 0.2);
+  color: #ffffff;
+  font-size: 1.05rem;
+  outline: none;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: top;
+  padding: 0;
+  -webkit-tap-highlight-color: transparent;
+  position: relative;
+}
+
+.keyboard__key:active {
+  background: rgba(255, 255, 255, 0.12);
+}
+
+.keyboard__keywide {
+  width: 12%;
+}
+
+.keyboard__keyextrawide {
+  width: 36%;
+  max-width: 500px;
+}
+
+.keyboard__keyactivatable::after {
+  content: '';
+  top: 10px;
+  right: 10px;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 50%;
+}
+
+.keyboard__keyactive::after {
+  background: #08ff00;
+}
+
+.keyboard__keydark {
+  background: rgba(0, 0, 0, 0.25);
 }
