--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -2,4 +2,4 @@ $primary-color: #222222;
 $text-red-color: #e60000;
 $text-yellow-color: #f6aa28;
 $text-green-color: #558714;
-$grey-logo: #a7a7a7;
+$white: #ffffff;
