--- a/src/assets/stylesheets/graph.scss
+++ b/src/assets/stylesheets/graph.scss
@@ -5,5 +5,17 @@
 
 .graph-wrapper {
   @include wrapper-props;
+  @include fullscreen-btn;
   grid-area: graph;
+}
+
+.fullScreenButton {
+  bottom: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.hide-graph {
+  display: none;
 }
