--- a/src/assets/stylesheets/map.scss
+++ b/src/assets/stylesheets/map.scss
@@ -4,7 +4,8 @@
 
 .map-wrapper {
   @include wrapper-props;
-
+  @include fullscreen-btn;
+  
   grid-area: map;
   display: flex;
   flex-direction: column;
@@ -96,29 +97,6 @@
   color: $text-red-color;
 }
 
-.map-container_wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.fullScreenButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-  z-index: 1000;
-  cursor: pointer;
-  
-  line-height: 40px;
-  border-radius: 3px;
-  text-align: center;
-  background-color: $text-red-color;
-  transition: all 0.3s ease-out;
-}
-
-.fullScreenButton:hover {
-  cursor: pointer;
-  opacity: 0.6;
+.hide-map {
+  display: none;
 }
